fix: content overflowing

--- a/src/components/scaler/Scaler.module.scss
+++ b/src/components/scaler/Scaler.module.scss
@@ -3,7 +3,7 @@
 }
 
 .ActualSizer {
-  @apply overflow-hidden;
+  // @apply overflow-hidden;
 }
 
 .ScaledContent {
